Add Logging all events
